refactor: 좌석 도메인 모델 재설계 및 holdSeat 멱등성 구현
- Seat 도메인 객체 도입 (status + owner + validation + isAvailableFor)
- RedisSeat adapter DTO 분리로 Redis 값 파싱 책임 캡슐화
- holdSeat 멱등성: 같은 유저 재선점 시 TTL 갱신 후 성공 처리
- SeatStatuses -> Seats, getAllSeatStatuses -> getSeats 리네이밍
- 내가 선점한 좌석은 available로 표시되도록 display status 분리
- X-Queue-Token 헤더 필수로 변경

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>